A freezing bug on safari fixed. Changes on the statistics end.

--- a/website/css/stats.css
+++ b/website/css/stats.css
@@ -85,10 +85,11 @@ table tr:nth-child(even) {
 }
 th {
     background:#abcdef;
+    white-space: nowrap;
 }
 .space {
 	font-size: 20px;
-  	text-align: left;
+  	text-align: right;
     position: relative;
     padding-top: 20px;
     padding-bottom: 35px;
